# cpp_crack_app

./: CMakeLists.txt  README.md  run.ipynb
models/: caffe_alexnet_train_iter_450000.caffemodel  crack_mean.binaryproto  deploy_crack.prototxt  labels.txt  solver.prototxt  train_val.prototxt
src/: Makefile  crack.cpp  crack.hpp  main.cpp  predict.cpp  predict.hpp
